@@ -17,6 +17,7 @@
  */
 
 #include <grub/loader.h>
+#include <grub/machine/machine.h>
 #include <grub/machine/memory.h>
 #include <grub/machine/loader.h>
 #include <grub/file.h>
@@ -142,6 +143,12 @@ allocate_pages (grub_size_t prot_size)
   real_mode_mem = 0;
   prot_mode_mem = 0;
   
+  /* i386-pc port adds lower memory to heap, which collides with
+     `real_mode_mem' allocation below.  */
+#ifdef GRUB_MACHINE_PCBIOS
+#error
+#endif
+
   auto int NESTED_FUNC_ATTR hook (grub_uint64_t, grub_uint64_t, grub_uint32_t);
   int NESTED_FUNC_ATTR hook (grub_uint64_t addr, grub_uint64_t size, grub_uint32_t type)
     {
